Semana 6 GUI and SOM

--- a/src/Neuronal_Networks/Perceptron/GradosCelcius/RNA-Predice-Grados-Fahrenheit.ipynb
+++ b/src/Neuronal_Networks/Perceptron/GradosCelcius/RNA-Predice-Grados-Fahrenheit.ipynb
@@ -72,6 +72,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.arra"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
